# eip55-checksum

./: Cargo.toml  README.md
src/: main.rs
