[package]
name = "eip55checksum"
version = "0.1.0"
authors = ["lvqinghao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#keccak-hash = "0.4.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
# sha3 = "0.8.2"
rust-crypto = "0.2"


hex = "0.4.2"
